bugfix: preview description word-wrap

--- a/src/entities/user/ui/Preview/components/FullPreview/FullPreview.module.scss
+++ b/src/entities/user/ui/Preview/components/FullPreview/FullPreview.module.scss
@@ -104,6 +104,7 @@
   .description {
     border-top: 2px solid var(--border-main);
     padding: 16px;
+    word-wrap: break-word;
   }
 }
 
